# WavetableV1

./: .gitignore  .gitmodules  Aliasing_Notes.md  FFT_Nyquist_Wavetable_Math.md  README.md
WaveTablePlugin/: CMakeLists.txt  WaveTablePlugin.jucer
WaveTablePlugin/Source/: ADSR.cpp  ADSR.h  BWADSR.cpp  BWADSR.h  BinaryManager.cpp  BinaryManager.h  Graphics.cpp  Graphics.h  ImportWavetable.cpp  ImportWavetable.h  MipMapGenerator.cpp  MipMapGenerator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Synthesizer.cpp  Synthesizer.h  WaveTable.cpp  WaveTable.h  WavetableGenerator.cpp  WavetableGenerator.h
WavetableV1/: WavetableV1.jucer
WavetableV1/Source/: Main.cpp
